Fix results font on Mobile (#34)
* Fix results font on mobile, closes #19

* Cleanup

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -298,7 +298,7 @@ select.search-input:disabled {
 
 .results-cell {
     @include results-cell-layout;
-    font-size: 12pt;
+    font-size: 16px;
 
     @include for-tablet-landscape-up {
         font-size: 1.2rem;
